--- a/.github/workflows/myfirstworkflow.yml
+++ b/.github/workflows/myfirstworkflow.yml
@@ -34,6 +34,8 @@ jobs:
         echo test, and deploy your project.
   jobname2:
     runs-on: ubuntu-latest
+    needs: [jobname1]
+    
     steps:
     - name: Run second step from jobname2
       run: echo My second step from jobname2 
