--- a/.github/workflows/ myfirstworkflow.yml
+++ b/.github/workflows/ myfirstworkflow.yml
@@ -1,6 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
 name: my_GitHUB_new
+env:
+  MY_APPLICATION: "My flask"
+  PACKAGE_NAME  : "Lion_deploy-${{ github.sha }}"
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -26,6 +29,11 @@ jobs:
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
+      
+    - name: A few more commands
+      run: |
+        echo "Hello Lev"
+        echo "Application name: ${{ env.MY_APPLICATION}}"
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
@@ -39,5 +47,9 @@ jobs:
     steps:
     - name: Run second step from jobname2
       run: echo My second step from jobname2 
+      
+    - name: Print Deploement package
+      run : echo My Deploy package is ${{ env.PACKAGE_NAME }}
+     
     
     
